# crosshair

./: README  README.md  setup.cfg  setup.py  tox.ini
crosshair/: commands.py  plugins.py  shell.py  ssh.py
tests/: test_command.py  test_pluginmanager.py  test_shell.py  test_ssh.py
tests/data/private_keys/: admin  user
tests/data/public_keys/: admin.pub  user.pub
