[metadata]
name = crosshair
version = 0.1
summary = Issue commands to your application using SSH
author = Nicola Heald
author-email = nicola@notnowlewis.com
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[pbr]
warnerrors = True
